--- a/mainline/alpine/Dockerfile
+++ b/mainline/alpine/Dockerfile
@@ -1,8 +1,10 @@
-FROM alpine:3.7
+FROM resin:armhf-alpine
 
 LABEL maintainer="NGINX Docker Maintainers <docker-maint@nginx.com>"
 
 ENV NGINX_VERSION 1.13.12
+
+RUN [ "cross-build-start" ]
 
 RUN GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
 	&& CONFIG="\
@@ -142,5 +144,7 @@ COPY nginx.vh.default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 
 STOPSIGNAL SIGTERM
+
+RUN [ "cross-build-end" ]
 
 CMD ["nginx", "-g", "daemon off;"]
